# aoc-input-build

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
