[package]
name = "aoc-input-build"
version = "0.1.2"
edition = "2024"
authors = ["Gwen Lago <oliver.oli.lago.@gmail.com>"]
description = "AoC helper that automatically downloads inputs. For use as a build dependency."
license = "MIT"
repository = "https://github.com/olilag/aoc-input-build"
documentation = "https://docs.rs/aoc-input-build"
keywords = ["aoc", "adventofcode", "build-dependencies", "helper", "input"]
categories = ["development-tools::build-utils"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
icu_calendar = "2.1.1"
icu_datetime = "2.1.1"
icu_locale = "2.1.1"
icu_time = "2.1.1"
jiff = "0.2.15"
jiff-icu = "0.2.0"
locale_config = "0.3.0"
regex = "1.12.2"
ureq = "3.1.2"
